<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="ReRead">다시 읽기</string>
    <string name="Delete">일기 삭제</string>
    <string name="FontSize">글씨 크기</string>
    <string name="BigSize">글씨 크게</string>
    <string name="MediumSize">글씨 보통</string>
    <string name="SamllSize">글씨 작게</string>
    <string name="CheckDialog">일기를 삭제하겠습니까?</string>
</resources>
